// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskList Snapshots matches snapshot with filtered tasks 1`] = `
<div>
  <div
    class="task-list-container"
  >
    <div
      class="task-list-filters mb-6 flex flex-col sm:flex-row gap-4"
    >
      <div
        class="flex-1"
      >
        <label
          class="sr-only"
          for="task-search"
        >
          Search tasks
        </label>
        <input
          class="task-search-input w-full px-4 py-2 bg-gray-800 border border-gray-700 rounded-lg text-white placeholder-gray-400"
          id="task-search"
          placeholder="Search tasks..."
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          class="sr-only"
          for="status-filter"
        >
          Filter by status
        </label>
        <select
          aria-label="Filter by status"
          class="task-status-filter px-4 py-2 bg-gray-800 border border-gray-700 rounded-lg text-white"
          id="status-filter"
        >
          <option
            value="ALL"
          >
            All Tasks
          </option>
          <option
            value="PENDING"
          >
            Pending
          </option>
          <option
            value="IN_PROGRESS"
          >
            In Progress
          </option>
          <option
            value="COMPLETED"
          >
            Completed
          </option>
        </select>
      </div>
    </div>
    <div
      style="position: relative; height: 800px; width: 100%; overflow: auto; will-change: transform; direction: ltr;"
    >
      <div
        style="height: 200px; width: 100%;"
      >
        <div
          style="position: absolute; left: 0px; top: 0px; height: 200px; width: 100%;"
        >
          <div
            class="task-item p-4 mb-4 border-2 rounded-lg bg-gray-800 border-green-500"
            data-testid="task-item"
          >
            <div
              class="task-item-header flex justify-between items-center mb-2"
            >
              <h3
                class="task-item-title text-lg font-semibold text-white"
              >
                Completed Task
              </h3>
              <span
                aria-label="completed"
                class="task-item-status px-2 py-1 rounded bg-green-900 text-green-100"
                role="status"
              >
                COMPLETED
              </span>
            </div>
            <p
              class="task-item-description text-gray-300 mb-2"
            >
              Description 3
            </p>
            <p
              class="task-item-due-date text-sm text-gray-400"
            >
              Due: 
              Dec 31, 2024
            </p>
            <div
              class="task-item-controls flex justify-between mt-4"
            >
              <select
                class="task-status-select p-2 border rounded bg-gray-700 text-white border-gray-600 focus:border-blue-500 focus:ring-blue-500"
              >
                <option
                  value="PENDING"
                >
                  Pending
                </option>
                <option
                  value="IN_PROGRESS"
                >
                  In Progress
                </option>
                <option
                  value="COMPLETED"
                >
                  Completed
                </option>
              </select>
              <div
                class="task-item-buttons space-x-2"
              >
                <button
                  class="task-edit-button px-3 py-1 bg-blue-600 text-white rounded hover:bg-blue-700"
                >
                  Edit
                </button>
                <button
                  class="task-delete-button px-3 py-1 bg-red-600 text-white rounded hover:bg-red-600"
                >
                  Delete
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TaskList Snapshots matches snapshot with multiple tasks 1`] = `
<div>
  <div
    class="task-list-container"
  >
    <div
      class="task-list-filters mb-6 flex flex-col sm:flex-row gap-4"
    >
      <div
        class="flex-1"
      >
        <label
          class="sr-only"
          for="task-search"
        >
          Search tasks
        </label>
        <input
          class="task-search-input w-full px-4 py-2 bg-gray-800 border border-gray-700 rounded-lg text-white placeholder-gray-400"
          id="task-search"
          placeholder="Search tasks..."
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          class="sr-only"
          for="status-filter"
        >
          Filter by status
        </label>
        <select
          aria-label="Filter by status"
          class="task-status-filter px-4 py-2 bg-gray-800 border border-gray-700 rounded-lg text-white"
          id="status-filter"
        >
          <option
            value="ALL"
          >
            All Tasks
          </option>
          <option
            value="PENDING"
          >
            Pending
          </option>
          <option
            value="IN_PROGRESS"
          >
            In Progress
          </option>
          <option
            value="COMPLETED"
          >
            Completed
          </option>
        </select>
      </div>
    </div>
    <div
      style="position: relative; height: 800px; width: 100%; overflow: auto; will-change: transform; direction: ltr;"
    >
      <div
        style="height: 600px; width: 100%;"
      >
        <div
          style="position: absolute; left: 0px; top: 0px; height: 200px; width: 100%;"
        >
          <div
            class="task-item p-4 mb-4 border-2 rounded-lg bg-gray-800 border-yellow-500"
            data-testid="task-item"
          >
            <div
              class="task-item-header flex justify-between items-center mb-2"
            >
              <h3
                class="task-item-title text-lg font-semibold text-white"
              >
                Task 1
              </h3>
              <span
                aria-label="pending"
                class="task-item-status px-2 py-1 rounded bg-yellow-900 text-yellow-100"
                role="status"
              >
                PENDING
              </span>
            </div>
            <p
              class="task-item-description text-gray-300 mb-2"
            >
              Description 1
            </p>
            <p
              class="task-item-due-date text-sm text-gray-400"
            >
              Due: 
              Dec 31, 2024
            </p>
            <div
              class="task-item-controls flex justify-between mt-4"
            >
              <select
                class="task-status-select p-2 border rounded bg-gray-700 text-white border-gray-600 focus:border-blue-500 focus:ring-blue-500"
              >
                <option
                  value="PENDING"
                >
                  Pending
                </option>
                <option
                  value="IN_PROGRESS"
                >
                  In Progress
                </option>
                <option
                  value="COMPLETED"
                >
                  Completed
                </option>
              </select>
              <div
                class="task-item-buttons space-x-2"
              >
                <button
                  class="task-edit-button px-3 py-1 bg-blue-600 text-white rounded hover:bg-blue-700"
                >
                  Edit
                </button>
                <button
                  class="task-delete-button px-3 py-1 bg-red-600 text-white rounded hover:bg-red-600"
                >
                  Delete
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          style="position: absolute; left: 0px; top: 200px; height: 200px; width: 100%;"
        >
          <div
            class="task-item p-4 mb-4 border-2 rounded-lg bg-gray-800 border-blue-500"
            data-testid="task-item"
          >
            <div
              class="task-item-header flex justify-between items-center mb-2"
            >
              <h3
                class="task-item-title text-lg font-semibold text-white"
              >
                Task 2
              </h3>
              <span
                aria-label="in_progress"
                class="task-item-status px-2 py-1 rounded bg-blue-900 text-blue-100"
                role="status"
              >
                IN PROGRESS
              </span>
            </div>
            <p
              class="task-item-description text-gray-300 mb-2"
            >
              Description 2
            </p>
            <p
              class="task-item-due-date text-sm text-gray-400"
            >
              Due: 
              Dec 31, 2024
            </p>
            <div
              class="task-item-controls flex justify-between mt-4"
            >
              <select
                class="task-status-select p-2 border rounded bg-gray-700 text-white border-gray-600 focus:border-blue-500 focus:ring-blue-500"
              >
                <option
                  value="PENDING"
                >
                  Pending
                </option>
                <option
                  value="IN_PROGRESS"
                >
                  In Progress
                </option>
                <option
                  value="COMPLETED"
                >
                  Completed
                </option>
              </select>
              <div
                class="task-item-buttons space-x-2"
              >
                <button
                  class="task-edit-button px-3 py-1 bg-blue-600 text-white rounded hover:bg-blue-700"
                >
                  Edit
                </button>
                <button
                  class="task-delete-button px-3 py-1 bg-red-600 text-white rounded hover:bg-red-600"
                >
                  Delete
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          style="position: absolute; left: 0px; top: 400px; height: 200px; width: 100%;"
        >
          <div
            class="task-item p-4 mb-4 border-2 rounded-lg bg-gray-800 border-green-500"
            data-testid="task-item"
          >
            <div
              class="task-item-header flex justify-between items-center mb-2"
            >
              <h3
                class="task-item-title text-lg font-semibold text-white"
              >
                Completed Task
              </h3>
              <span
                aria-label="completed"
                class="task-item-status px-2 py-1 rounded bg-green-900 text-green-100"
                role="status"
              >
                COMPLETED
              </span>
            </div>
            <p
              class="task-item-description text-gray-300 mb-2"
            >
              Description 3
            </p>
            <p
              class="task-item-due-date text-sm text-gray-400"
            >
              Due: 
              Dec 31, 2024
            </p>
            <div
              class="task-item-controls flex justify-between mt-4"
            >
              <select
                class="task-status-select p-2 border rounded bg-gray-700 text-white border-gray-600 focus:border-blue-500 focus:ring-blue-500"
              >
                <option
                  value="PENDING"
                >
                  Pending
                </option>
                <option
                  value="IN_PROGRESS"
                >
                  In Progress
                </option>
                <option
                  value="COMPLETED"
                >
                  Completed
                </option>
              </select>
              <div
                class="task-item-buttons space-x-2"
              >
                <button
                  class="task-edit-button px-3 py-1 bg-blue-600 text-white rounded hover:bg-blue-700"
                >
                  Edit
                </button>
                <button
                  class="task-delete-button px-3 py-1 bg-red-600 text-white rounded hover:bg-red-600"
                >
                  Delete
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TaskList Snapshots matches snapshot with no tasks 1`] = `
<div>
  <div
    class="task-list-container"
  >
    <div
      class="task-list-filters mb-6 flex flex-col sm:flex-row gap-4"
    >
      <div
        class="flex-1"
      >
        <label
          class="sr-only"
          for="task-search"
        >
          Search tasks
        </label>
        <input
          class="task-search-input w-full px-4 py-2 bg-gray-800 border border-gray-700 rounded-lg text-white placeholder-gray-400"
          id="task-search"
          placeholder="Search tasks..."
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          class="sr-only"
          for="status-filter"
        >
          Filter by status
        </label>
        <select
          aria-label="Filter by status"
          class="task-status-filter px-4 py-2 bg-gray-800 border border-gray-700 rounded-lg text-white"
          id="status-filter"
        >
          <option
            value="ALL"
          >
            All Tasks
          </option>
          <option
            value="PENDING"
          >
            Pending
          </option>
          <option
            value="IN_PROGRESS"
          >
            In Progress
          </option>
          <option
            value="COMPLETED"
          >
            Completed
          </option>
        </select>
      </div>
    </div>
    <div
      class="task-list-empty text-center py-8 text-gray-400"
    >
      No tasks yet. Add your first task!
    </div>
  </div>
</div>
`;
